--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -75,6 +75,8 @@
   <a th:href="@{/kubstuTest/manage-topics-subject}" class="btn btn-warning w-100">Управление темами</a>
   <a th:href="@{/kubstuTest/questions/upload-form}" class="btn btn-info w-100">Загрузить вопросы</a>
   <a th:href="@{/kubstuTest/results}" style="font-weight:bold;">Результаты тестов</a>
+  <a th:href="@{/kubstuTest/group/create}" style="font-weight:bold;">Создать группу</a>
+  <a th:href="@{/kubstuTest/faculty/create}" style="font-weight:bold;">Создать факультет</a>
 </div>
 
 <div class="content">
